<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                tools:text="v1.0.0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/disclaimer"
                tools:ignore="UnusedAttribute" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/divider_light" />

            <TextView
                android:id="@+id/contactDeveloper"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/selector_dark"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:text="@string/title_contact_developer"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sourceCode"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/selector_dark"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:text="@string/title_source_code"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/openSourceLicenses"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/selector_dark"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:text="@string/title_open_source_licenses"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>